--- a/GSR_Web Socket Test - Embedded/platformio.ini
+++ b/GSR_Web Socket Test - Embedded/platformio.ini
@@ -14,3 +14,4 @@ board = node32s
 framework = arduino
 lib_deps = ottowinter/ESPAsyncWebServer-esphome@^3.0.0
 monitor_speed = 115200
+monitor_filters = log2file
